--- a/Semana-06/css/style.css
+++ b/Semana-06/css/style.css
@@ -71,7 +71,7 @@ label {
     display: block;
 }
 
-form p {
+form fieldset p {
     margin-bottom: 10px;
     color: #FF3E1D;
 }
@@ -139,6 +139,11 @@ form p {
 
 .disabled:hover {
     color: #6e6e6e;
+}
+
+.para-alert {
+    margin-bottom: 10px;
+    color: #FF3E1D;
 }
 
 /* Tablet */
