--- a/Semana-07/css/style.css
+++ b/Semana-07/css/style.css
@@ -146,6 +146,50 @@ form fieldset p {
     color: #FF3E1D;
 }
 
+.display-none {
+    display: none;
+}
+
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal-content {
+    margin: 15% auto;
+    padding: 20px;
+    width: fit-content;
+    border: 1px solid #888;
+    background-color: #fefefe;
+}
+
+.modal-content p {
+    margin: 5px 0;
+    line-height: 1.5;
+}
+
+.close {
+    margin-left: 20px;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    color: #aaa;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* Tablet */
 @media (min-width: 481px) {
     h1 {
